# SKy-Aos

./: CMakeLists.txt  Sky-Aos.cpp
hederfiles/: Mesh.h
include/glad/: glad.h
rsc/shader/: default.frag  outlining.vert
src/: Camera.cpp  Mesh.cpp  main.cpp
